# ea-fc25-scraper

./: .gitignore  README.md  pyproject.toml
ea_fc25_scraper/: index.py
tests/: test_index.py
