[tool.poetry]
name = "ea-fc25-scraper"
version = "0.1.0"
description = ""
authors = ["Saurav M Hiremath <sauravhiremath@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.8"
asyncio = "^3.4.3"
aioresponses = "^0.7.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.23.8"
aioresponses = "^0.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]